--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,7 @@
 
     <div class="projects center">
         <div class="project">
-            <a href="https://discord.gg/Y7YZDM2QMK"><img src="Evere.jpg" alt="A Picture of Everé"></a>
+            <a href="https://kiloxiix.github.io/Project-Evere/"><img src="Evere.jpg" alt="A Picture of Everé"></a>
             <h2>The Everé Project</h2>
         </div>
     </div>
