--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </header>
     <div class="h1"><h1 class="center">About Me</h1></div>
     <div class="intro center">
-        <p>Hello, my name is Jason.<br>I'm just your average college student.<br>I like to code whenever I have spare time.<br>I also recently switch my major to Computer Science with a specialization in Artificial Intelligence<br><br>Feel free to fill out this google form if you have the time<br>It's for a small personal project of mine<br><br><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfrVGQ0y1mScK9IFSnt3GqDep208h8ZVZc13aLz-uRZWtjyHA/viewform" class="googleform">Special Data Survey</a></p>
+        <p>Hello, my name is Jason.<br>I'm just your average college student.<br>I like to code whenever I have spare time.<br>I also recently switched my major to Computer Science with a specialization in Artificial Intelligence<br><br>Feel free to fill out this google form if you have the time<br>It's for a small personal project of mine<br><br><br><a href="https://docs.google.com/forms/d/e/1FAIpQLSfrVGQ0y1mScK9IFSnt3GqDep208h8ZVZc13aLz-uRZWtjyHA/viewform" class="googleform">Special Data Survey</a></p>
         <img src="me.jpg" alt="A Profile picture of Jason">
     </div>
 
